# esp32c6-yaml

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  config copy.yaml  config.yaml  config.yaml.switch  extract_text.py  generate_certs.sh  generate_creds_by_mac.py  lighting-app-pics-test.xml  partitions.csv  pyproject.toml  sdkconfig  sdkconfig.defaults  sdkconfig.defaults_wifi_thread  sdkconfig.old
.devcontainer/: devcontainer.json  postStart.sh
certs/: PAI.crt  PAI.key  cd.der
dev/: setup-ssh.sh
docs/: README.md  codegen_guardrails.md  yaml_spec.md
examples/: light.yaml
main/: CMakeLists.txt  app_driver.cpp  app_main.cpp  app_main_2.cpp  app_priv.h  common_macros.h  generated_config.h  idf_component.yml
main/device_modules/: device_module.h  extended_color_light.cpp  extended_color_light.h
main/device_modules/common/: button_module.cpp  button_module.h  endpoint_utils.cpp  endpoint_utils.h
main/device_modules/light/: light_module.cpp  light_module.h
main/device_modules/switch/: switch_module.cpp  switch_module.h
templates/: partitions.csv_4MB  partitions.csv_8MB  sdkconfig.defaults_thread  sdkconfig.defaults_wifi  sdkconfig.defaults_wifi_thread
tools/: build.cmake  config_generator.py  generate_certs.sh  parse_config.py  render_config.py
yml2esp/: cli.py  schema.json
yml2esp/templates/: CMakeLists.txt.j2  app_matter.cpp.j2  button.c.j2  driver_led_strip.c.j2  main.cpp.j2  manifest.yaml  matter_glue.cpp.j2  partitions.csv_16MB  sdkconfig.j2
