[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "yml2esp"
version = "0.1.0"
description = "YAML to ESP-IDF/ESP-Matter code generator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0", "jsonschema>=4.23.0", "jinja2>=3.1.4"]

[project.scripts]
yml2esp = "yml2esp.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["yml2esp*"]
exclude = ["examples*", "out*", "main*", "templates*", "certs*", "docs*"]

[tool.setuptools.package-data]
yml2esp = ["templates/*.j2", "schema.json"]
